Remove StringFileObject, FileManagerWrapper